[package]
name = "shatter"
version = "0.1.0"
authors = ["Julius de Boer <45075461+JuliusDeBoer@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.69"
image = "0.25.1"

[dependencies.web-sys]
version = "0.3.69"
features = [
	"CanvasRenderingContext2d",
	"ImageData"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
